Adding Eva speech recognition.
a) Added classes to allow usage of many speech engines
b) Added option to select between Eva Speech and Google Speech
c) Implemented Eva speech: Encoding to speex,HTTP chunked transfer

TODO:
a)Handle HTTP response loss
b)Change dictation class to remove all static references
c)Add remarks to code

--- a/androidts/res/layout/fragment_chat.xml
+++ b/androidts/res/layout/fragment_chat.xml
@@ -39,4 +39,22 @@
         android:src="@drawable/microphone_icon"
         android:text="@string/button" />
 
+    <RadioButton
+        android:id="@+id/radioButtonEva"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/radioButtonGoogle"
+        android:layout_alignParentLeft="true"
+        android:checked="true"
+        android:text="Eva" />
+
+    <RadioButton
+        android:id="@+id/radioButtonGoogle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/search_button"
+        android:layout_alignParentLeft="true"
+        android:checked="false"
+        android:text="Google" />
+  
 </RelativeLayout>
