--- a/EvaAPIs/res/layout/listening.xml
+++ b/EvaAPIs/res/layout/listening.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="bottom|center_horizontal"
+    android:layout_gravity="center_vertical|center_horizontal"
     android:gravity="center_vertical|center_horizontal"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@drawable/speak_bitmap"
+    android:theme="@style/Theme.Transparent" >
 
     <TextView
         android:id="@+id/text_listeningStatus"
