--- a/androidts/res/layout/calendar.xml
+++ b/androidts/res/layout/calendar.xml
@@ -18,7 +18,7 @@
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="People per room:"
+            android:text="@string/people_per_room"
             android:textColor="#000000"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
