--- a/android_search/res/layout/new_main.xml
+++ b/android_search/res/layout/new_main.xml
@@ -16,7 +16,7 @@
         swipeytabs:tabIndicatorHeight="3dip"
         android:background="#ff3b3b3b"/>
 
-    <android.support.v4.view.ViewPager
+    <com.evature.components.MyViewPager
         android:id="@+id/viewpager"
         android:layout_width="fill_parent"
         android:layout_height="0px"
