--- a/android_search/res/menu/mainmenu.xml
+++ b/android_search/res/menu/mainmenu.xml
@@ -2,6 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
+        android:id="@+id/new_session"
+        android:title="New"
+        android:icon="@drawable/session_restart"
+        android:showAsAction="ifRoom|withText"
+        >
+        <!-- android:showAsAction="always" -->
+    </item>
+     
+    <item
         android:id="@+id/settings"
         android:title="Settings">
     </item>
