--- a/android_search/res/layout/fragment_chat.xml
+++ b/android_search/res/layout/fragment_chat.xml
@@ -16,6 +16,7 @@
         android:layout_centerHorizontal="true"
         android:divider="@null"
         android:dividerHeight="0dp"
+        android:drawSelectorOnTop="true"
         android:stackFromBottom="true"
         android:transcriptMode="alwaysScroll" >
 
