--- a/android_search/res/layout/row_eva_chat.xml
+++ b/android_search/res/layout/row_eva_chat.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal" >
+    android:orientation="horizontal" 
+    android:background="#DDDDDD" >
 
  
     <TextView
@@ -20,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight = "true"
         android:padding="2dip"
-        android:src="@drawable/eva_icon" 
+        android:src="@drawable/eva_head" 
         android:contentDescription="@string/chat_icon_description"/>
     
 
