--- a/android_search/res/layout/row_mychat.xml
+++ b/android_search/res/layout/row_mychat.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@color/palette_mid_gray"
+    android:background="@color/palette_dark_grey"
     android:orientation="horizontal" >
 
     <ImageView
@@ -10,15 +10,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="2dip"
-        android:src="@drawable/chat_icon" 
+        android:src="@drawable/my_chat" 
         android:contentDescription="@string/chat_icon_description"/>
  
     <TextView
         android:id="@+id/label"
         android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="center_vertical"
         android:paddingLeft="3dip"
         android:paddingRight="3dip"
-        android:layout_height="wrap_content"
+        android:textColor="#10FF10"
         android:textSize="16sp" />
     
     <EditText 
