--- a/android_search/res/layout/new_main.xml
+++ b/android_search/res/layout/new_main.xml
@@ -1,6 +1,6 @@
 <!-- Based on this blog post: http://blog.peterkuterna.net/2011/09/viewpager-meets-swipey-tabs.html -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/the_main_layout"
     xmlns:swipeytabs="http://schemas.android.com/apk/res/com.evature.search"
     android:orientation="vertical"
@@ -19,7 +19,23 @@
     <com.evature.components.MyViewPager
         android:id="@+id/viewpager"
         android:layout_width="fill_parent"
-        android:layout_height="0px"
-        android:layout_weight="1" />
+        android:layout_below="@id/swipeytabs"
+        android:layout_above="@+id/search_button"
+        android:layout_height="fill_parent" />
 
-</LinearLayout>
+    
+     <ImageButton
+        android:id="@+id/search_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/custom_button"
+        android:contentDescription="@string/microphone_button"
+        android:onClick="myClickHandler"
+        android:padding="14dp"
+        android:src="@drawable/microphone_icon"
+        android:text="@string/button" />
+</RelativeLayout>
