--- a/android_search/res/layout/row_eva_chat.xml
+++ b/android_search/res/layout/row_eva_chat.xml
@@ -3,7 +3,8 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal" 
-    android:background="#DDDDDD" >
+    android:background="@color/eva_chat_in_session_bg"
+     >
 
  
     <TextView
@@ -13,6 +14,7 @@
         android:layout_toLeftOf="@+id/icon"
         android:paddingLeft="3dip"
         android:paddingRight="3dip"
+        android:textColor="@color/eva_chat_in_session_text"
         android:textSize="16sp" />
     
     <ImageView
