--- a/android_search/res/layout/row_mychat.xml
+++ b/android_search/res/layout/row_mychat.xml
@@ -2,17 +2,32 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@color/palette_dark_grey"
+    android:background="@color/my_chat_in_session_bg"
     android:orientation="horizontal" >
 
-    <ImageView
+    <!-- ImageView
         android:id="@+id/icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="2dip"
         android:src="@drawable/my_chat" 
-        android:contentDescription="@string/chat_icon_description"/>
+        android:contentDescription="@string/chat_icon_description"/> -->
  
+     <TextView
+        android:id="@+id/icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="5dip"
+        android:paddingRight="5dip"
+        android:paddingTop="2dip"
+        android:paddingBottom="2dip"
+        android:textStyle="bold"
+        android:gravity="center_vertical"
+        android:typeface="monospace"
+        android:text="@string/eva_icon"
+        android:textSize="20sp"/>
+ 
+    
     <TextView
         android:id="@+id/label"
         android:layout_width="fill_parent"
@@ -20,7 +35,7 @@
         android:gravity="center_vertical"
         android:paddingLeft="3dip"
         android:paddingRight="3dip"
-        android:textColor="#10FF10"
+        android:textColor="@color/my_chat_in_session_text"
         android:textSize="16sp" />
     
     <EditText 
