support for older Android versions  (no ActionBar) and support for reverse price/quality search

--- a/android_search/res/menu/mainmenu.xml
+++ b/android_search/res/menu/mainmenu.xml
@@ -5,8 +5,8 @@
         android:id="@+id/new_session"
         android:title="New"
         android:icon="@drawable/session_restart"
-        android:showAsAction="ifRoom|withText"
         >
+        <!-- android:showAsAction="ifRoom|withText" -->
         <!-- android:showAsAction="always" -->
     </item>
      
