--- a/android_search/res/layout/row_eva_chat.xml
+++ b/android_search/res/layout/row_eva_chat.xml
@@ -14,6 +14,7 @@
         android:layout_toLeftOf="@+id/icon"
         android:paddingLeft="3dip"
         android:paddingRight="3dip"
+        android:paddingBottom="2dip"
         android:textColor="@color/eva_chat_in_session_text"
         android:textSize="16sp" />
     
