--- a/android_search/res/layout/row_eva_dialog.xml
+++ b/android_search/res/layout/row_eva_dialog.xml
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"
         android:paddingLeft="3dip"
         android:paddingRight="3dip"
+        android:paddingBottom="7dip"
         android:textSize="16sp" />
 
 </LinearLayout>
