--- a/android_search/res/layout/row_mychat.xml
+++ b/android_search/res/layout/row_mychat.xml
@@ -20,11 +20,12 @@
         android:paddingLeft="5dip"
         android:paddingRight="5dip"
         android:paddingTop="2dip"
-        android:paddingBottom="2dip"
+        android:paddingBottom="0dip"
         android:textStyle="bold"
         android:gravity="center_vertical"
         android:typeface="monospace"
         android:text="@string/eva_icon"
+        android:textColor="@color/my_chat_in_session_text"
         android:textSize="20sp"/>
  
     
@@ -35,6 +36,7 @@
         android:gravity="center_vertical"
         android:paddingLeft="3dip"
         android:paddingRight="3dip"
+        android:paddingBottom="7dip"
         android:textColor="@color/my_chat_in_session_text"
         android:textSize="16sp" />
     
