Logging improvement,  recording visualization fixes

--- a/EvaAPIs/res/layout/listening.xml
+++ b/EvaAPIs/res/layout/listening.xml
@@ -19,6 +19,13 @@
             android:layout_height="wrap_content"
             android:text="Listening..." />
 
+        <ProgressBar
+            android:id="@+id/progressBar1"
+            style="?android:attr/progressBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
+
     </LinearLayout>
 
     <com.evaapis.SoundLevelView
