--- a/android_search/res/layout/row_eva_chat.xml
+++ b/android_search/res/layout/row_eva_chat.xml
@@ -20,8 +20,8 @@
     
     <ImageView
         android:id="@id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dip"
+        android:layout_height="40dip"
         android:layout_alignParentRight = "true"
         android:padding="2dip"
         android:src="@drawable/eva_head" 
