--- a/android_search/res/layout/flight_list_item.xml
+++ b/android_search/res/layout/flight_list_item.xml
@@ -3,8 +3,7 @@
     android:id="@+id/flight_list_item_layout"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:layout_marginRight="1.0dip"
-    android:orientation="horizontal" >
+    android:orientation="vertical" >
 
     <!-- <TextView -->
     <!-- android:id="@+id/price" -->
