fixed to work on api level 8 (android 2.2)   fixed vayant to search base on flow element

--- a/android_search/res/layout/flight_list_portrait.xml
+++ b/android_search/res/layout/flight_list_portrait.xml
@@ -105,7 +105,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:duplicateParentState="true"
-                android:text="£ per" />
+                android:text="Price per" />
 
             <ImageView
                 android:id="@+id/search_results_person_icon"
