--- a/android_search/res/xml/preferences.xml
+++ b/android_search/res/xml/preferences.xml
@@ -2,11 +2,11 @@
 <!-- http://developer.android.com/resources/samples/ApiDemos/res/xml/preferences.html -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
-	<PreferenceCategory android:title="@string/preferences_title">
+	<PreferenceCategory android:title="@string/internalization_title">
 	    <ListPreference 
 	        android:key="preference_currency"
 	        android:title="@string/currency_pref_title"
-	        android:summary="@string/currency_pref_summary"
+	        android:summary="@string/currency_summary"
 	        android:entries="@array/entries_currency_preference"
 	        android:entryValues="@array/entryvalues_currency_preference" />
 	    <ListPreference 
@@ -16,6 +16,14 @@
 	        android:entries="@array/locales"
 	        android:entryValues="@array/locale_values"
 	        />
+	    <ListPreference 
+	        android:key="preference_language"
+	        android:title="Language"
+	        android:summary="Search and show results using this language"
+	        android:entries="@array/entries_languages"
+	        android:entryValues="@array/entryvalues_languages"
+	        />
+	    
 	</PreferenceCategory>
 	
 	
