--- a/android_search/res/values/arrays.xml
+++ b/android_search/res/values/arrays.xml
@@ -88,16 +88,14 @@
     </string-array>
     
     <string-array name="examples">
-        <item>Fly from London to NYC next Tuesday morning</item>
+        <!-- <item>Fly from London to NYC next Tuesday morning</item> -->
         <!-- <item>Hotels in Arlington</item> -->
-        <item>Hotel in NYC on Wednesday for 5 nights</item>
+        <!-- <item>Hotel in NYC on Wednesday for 5 nights</item> -->
         <!-- <item>Fly from Minto to Heatherwood</item> -->
-        <item>Fly to NY next Sunday, stay 5 nights in Arlignton, return</item>
         <!-- <item>Hotels in Heatherwood</item> -->
-        <item>Round trip flight from London to NYC next Wednesday, stay in a 5 star hotel for two weeks</item>
-        <item>Flights from Los Angeles to Paris on september 20, return on september 25th</item>
-        <item>3 Star hotels in NYC sorted by price</item>
-        <item>3 Star hotels in NYC sorted by name</item>
+        <item>Round trip flight from Istanbul to Nice France next Wednesday, stay in a 5 star hotel for one weeks</item>
+        <item>Flights from Los Angeles to Paris on November 20, return on November 23th</item>
+        <item>Fly to NY next Sunday, stay 5 nights in Arlignton, return</item>
         <item>3 Star hotels in NYC, on Wednesday for two nights, sorted by price descending</item>
         <item>3 Star hotels in Miami FL, on Wednesday for two nights, sorted by price ascending</item>
         <!-- <item>Fly to Madrid</item> -->
