--- a/android_search/res/layout/new_main.xml
+++ b/android_search/res/layout/new_main.xml
@@ -23,9 +23,45 @@
         android:layout_above="@+id/search_button"
         android:layout_height="fill_parent" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:layout_above="@+id/search_button" 
+        android:visibility="gone"
+        android:id="@+id/status_panel"
+        >
+
+        <TextView
+            android:id="@+id/text_listeningStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/listening_" />
+
+        <ProgressBar
+            android:id="@+id/progressBar1"
+            style="?android:attr/progressBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
+
+    </LinearLayout>
+
+    <com.evaapis.SoundLevelView
+        android:id="@+id/surfaceView_sound_wave"
+        android:layout_width="wrap_content"
+        android:layout_height="80dip"
+        android:layout_margin="20dip"
+        android:background="@color/half_black"
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+         />
+    
+    
+    
     
      <ImageButton
-        android:id="@+id/search_button"
+        android:id="@id/search_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
