--- a/android_search/res/values/colors.xml
+++ b/android_search/res/values/colors.xml
@@ -157,4 +157,5 @@
     <color name="eva_chat_in_session_bg">#f4f4f4</color>
     <color name="eva_chat_in_session_text">#404040</color>
     <color name="white">#fff</color>
+    <color name="half_black">#88000000</color>
 </resources>
